RESOLVED FIXED229787
[JSC] ScriptExecutable::newCodeBlockFor should handle exceptions more predictably
https://bugs.webkit.org/show_bug.cgi?id=229787
Summary [JSC] ScriptExecutable::newCodeBlockFor should handle exceptions more predict...
Ross Kirsling
Reported 2021-09-01 18:12:39 PDT
[JSC] ScriptExecutable::newCodeBlockFor should handle exceptions more predictably
Attachments
Patch (25.99 KB, patch)
2021-09-01 18:25 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2021-09-01 18:25:56 PDT
Mark Lam
Comment 2 2021-09-02 00:55:18 PDT
Comment on attachment 437100 [details] Patch The code is so much cleaner and more concise now. r=me if the EWS bots are happy.
EWS
Comment 3 2021-09-02 11:34:09 PDT
Committed r281939 (241248@main): <https://commits.webkit.org/241248@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437100 [details].
Radar WebKit Bug Importer
Comment 4 2021-09-02 11:35:28 PDT
Note You need to log in before you can comment on or make changes to this bug.